--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "Python: Django",
             "type": "python",
             "request": "launch",
+            "pythonPath": "${workspaceFolder}/venv/bin/python",
             "program": "${workspaceFolder}/manage.py",
             "args": [
                 "runserver"
@@ -20,6 +21,7 @@
             "type": "python",
             "request": "launch",
             "stopOnEntry": false,
+            "pythonPath": "${workspaceFolder}/venv/bin/python",
             "program": "${workspaceFolder}/manage.py",
             "args": [
                 "test",
