Fix du bug auto-évaluation

--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -155,7 +155,7 @@
           "earliestISO": "2023-01-01"
         },
         "htmlDescription": "Les restaurants de l’Etat, ses établissements publics, et les entreprises publiques nationales proposent une option végétarienne quotidienne, dès lors qu'ils proposent habituellement un choix multiple de menus, à partir du 1er janvier 2023.",
-        "id": "menu-vege",
+        "id": "option-vege",
         "readMore": false,
         "shortTitle": "Menu végé quoti",
         "tags": [
