--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 amqp==5.1.1
 arabic-reshaper==2.1.3
 asgiref==3.5.1
+asn1crypto==1.5.1
 astroid==2.11.5
+async-timeout==4.0.2
 attrs==21.4.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
@@ -10,13 +12,17 @@ boto3==1.23.0
 botocore==1.26.0
 celery==5.2.6
 certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==37.0.2
+cssselect2==0.6.0
 Deprecated==1.2.13
+dill==0.3.4
 Django==4.0.4
 django-anymail==8.6
 django-ckeditor==6.4.0
@@ -25,6 +31,7 @@ django-debug-toolbar==3.4.0
 django-filter==21.1
 django-js-asset==2.0.0
 django-magicauth @ git+https://github.com/betagouv/django-magicauth.git@51f4709d8593016ac67428a87bbd2810070ae288
+django-oauth-toolkit==2.0.0
 django-otp==1.1.3
 django-storages==1.12.3
 django-webpack-loader==1.5.0
@@ -42,11 +49,15 @@ idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
 jmespath==1.0.0
+jwcrypto==1.3
 kombu==5.2.4
 lazy-object-proxy==1.7.1
+lxml==4.8.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
+oauthlib==3.2.0
 openpyxl==3.0.9
+oscrypto==1.3.0
 packaging==21.3
 pathspec==0.9.0
 Pillow==9.1.0
@@ -56,16 +67,23 @@ pluggy==1.0.0
 prompt-toolkit==3.0.29
 psycopg2==2.9.3
 py==1.11.0
+pycparser==2.21
+pyHanko==0.13.1
+pyhanko-certvalidator==0.19.5
 pylint==2.13.9
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.9
+PyPDF3==1.0.6
 pytest==7.1.2
 pytest-django==4.5.2
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+qrcode==7.3.1
 redis==4.3.1
 regex==2022.4.24
 reportlab==3.6.9
@@ -76,10 +94,16 @@ sentry-sdk==1.5.12
 sib-api-v3-sdk==7.4.0
 six==1.16.0
 sqlparse==0.4.2
+svglib==1.3.0
 text-unidecode==1.3
+tinycss2==1.1.1
 toml==0.10.2
 tomli==2.0.1
+tqdm==4.64.0
 typing_extensions==4.2.0
+tzdata==2022.1
+tzlocal==4.2
+uritools==4.0.0
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
