Base oauth server working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,5 +30,13 @@
             "justMyCode": false,
             "django": true
         },
+        {
+            "name":"Python: Current File",
+            "type":"python",
+            "request":"launch",
+            "program":"${file}",
+            "console":"integratedTerminal",
+            "justMyCode":true
+        },
     ]
 }
