--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-unit-jest": "~5.0.8",
     "@vue/cli-service": "~4.5.15",
     "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^28.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
