--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ text-unidecode==1.3
 tinycss2==1.1.1
 toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.4
 tqdm==4.64.0
 typing_extensions==4.3.0
 tzdata==2022.2
