Icon replacement - first pass

--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -109,7 +109,7 @@
     "baseComponent": "DiversificationMeasure",
     "baseMeasureComponent": "DiversificationMeasure",
     "id": "diversification-des-menus",
-    "mdiIcon": "mdi-leaf",
+    "mdiIcon": "$leaf-fill",
     "mdiIconColor": "green darken-1",
     "shortTitle": "Diversification des menus",
     "subMeasures": [
