Remove unused view; improve waste measure short title

--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -52,7 +52,7 @@
     "id": "gaspillage-alimentaire",
     "mdiIcon": "mdi-offer",
     "mdiIconColor": "orange darken-2",
-    "shortTitle": "Gaspillage alimentaire",
+    "shortTitle": "Lutte contre le gaspillage",
     "subMeasures": [
       {
         "description": "Obligation de mettre en place une démarche de lutte contre le gaspillage alimentaire étendu à la restauration collective privée et obligation d'effectuer un diagnostic préalable à la réalisation de cette démarche. Lancement d’une expérimentation consistant à mettre en place une solution de réservation de repas pour adapter le nombre de repas nécessaires pour les gestionnaires volontaires de services de restauration collective dont les personnes morales de droit public ont la charge est lancée dès la promulgation de la loi et pour une durée de 3 ans. Les modalités d’application doivent être définies par décret.",
