--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -92,7 +92,7 @@
         "title": "Expérimentation d'une solution de réservation de repas"
       }
     ],
-    "successExplanation": "La cantine a fait un diagnostic du gaspillage alimentaire et a decidé sur une ou plus actions à faire.\nSi la cantine sert 3000 repas ou plus, elle propose aussi une convention de dons à une association habilitée.",
+    "successExplanation": "La cantine a fait un diagnostic du gaspillage alimentaire et a décidé sur une ou plus actions à faire.\nSi la cantine sert 3000 repas ou plus, elle propose aussi une convention de dons à une association habilitée.",
     "tags": [
       "scolaire",
       "administration",
@@ -181,7 +181,7 @@
         "who": "Pour les collectivités volontaires."
       }
     ],
-    "successExplanation": "La cantine offre au moins un repas végétarien par semaine si elle est dans le secteur scolaire, ou un repas végétarien par jour sinon.",
+    "successExplanation": "La cantine offre au moins un repas végétarien par semaine si elle est dans le secteur scolaire, ou un repas végétarien par jour pour les autres secteurs.",
     "title": "Diversification des sources de protéines et menus végétariens"
   },
   {
@@ -245,7 +245,7 @@
         "title": "Les contenants alimentaires en plastique sont interdits"
       }
     ],
-    "successExplanation": "La cantine n'utilise plus de contenants alimentaires de cuisson, de réchauffe, ni de service en matière plastique. En plus, la cantine ne mets plus à disposition des convives des bouteilles d’eau plate en plastique, ni des ustensiles à usage unique en matière plastique.",
+    "successExplanation": "La cantine n'utilise plus de contenants alimentaires de cuisson, de réchauffe, ni de service en matière plastique. De plus, la cantine ne met plus à disposition des convives des bouteilles d’eau plate en plastique, ni des ustensiles à usage unique en matière plastique.",
     "title": "Substitution des plastiques"
   },
   {
@@ -264,7 +264,7 @@
           "display": "Depuis le 1er janvier 2020",
           "earliestISO": "2020-01-01"
         },
-        "htmlDescription": "Les personnes morales ayant la charge d'un restaurant collectif informent à l'entrée du restaurant, par un affichage permanent, actualisé au moins une fois par an, lisible par tous les usagers, et au moins une fois par an par communication électronique, les usagers des restaurants collectifs de la part des produits définis au I de l'article L. 230-5-1 et de la part des produits issus de projets alimentaires territoriaux entrant dans la composition des repas servis.",
+        "htmlDescription": "Les personnes morales ayant la charge d'un restaurant collectif informent à l'entrée du restaurant, par un affichage permanent, actualisé au moins une fois par an, lisible par tous les usagers et au moins une fois par an par communication électronique, les usagers des restaurants collectifs de la part des produits définis au I de l'article L. 230-5-1 et de la part des produits issus de projets alimentaires territoriaux entrant dans la composition des repas servis.",
         "id": "convives-informes",
         "readMore": false,
         "shortTitle": "Convives informés",
