MAJ description option vege quotidienne

--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -155,7 +155,7 @@
           "display": "1er janvier 2023",
           "earliestISO": "2023-01-01"
         },
-        "htmlDescription": "Les restaurants de l’Etat, ses établissements publics, et les entreprises publiques nationales proposent une option végétarienne quotidienne, dès lors qu'ils proposent habituellement un choix multiple de menus, à partir du 1er janvier 2023.",
+        "htmlDescription": "À partir du 1er janvier 2023, les restaurants collectifs de l'État, les établissements publics et les entreprises publiques nationales doivent proposer une option végétarienne quotidienne, dès lors qu'ils proposent habituellement un choix multiple de menus.\n\nCes établissements sont les suivants :\n\n - les universités ou enseignements supérieurs publics, administration (RA ou RIA), établissements pénitenciers, restaurants des armées ;\n - les établissements publics placés sous la tutelle de l’État, comme par exemple des agences, instituts et centres nationaux (OFB, ANSES, IGNF, INRAE, ...), des établissements publics de santé* (CHR/CHU, CHN, CH, HL, CHS...) ou des établissements publics nationaux (ASP, CdC, CNRS, ...) ;​\n - les entreprises publiques : établissements publics industriels et commerciaux, sociétés commerciales (détention majoritaire du capital par l’État).",
         "id": "option-vege",
         "readMore": false,
         "shortTitle": "Menu végé quoti",
