--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,8 @@ jobs:
           DEFAULT_FROM_EMAIL: contact@example.com
           CONTACT_EMAIL: contact@example.com
           REDIS_URL: redis://localhost:6379/0
+          SIRET_API_KEY: fake
+          SIRET_API_SECRET: fake
         run: |
           python3 manage.py test
 
