--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asn1crypto==1.5.1
 astroid==2.15.4
 async-timeout==4.0.2
 attrs==22.2.0
+Authlib==1.2.0
 billiard==3.6.4.0
 black==23.1.0
 boto3==1.26.114
@@ -25,7 +26,6 @@ Django==4.1.7
 django-anymail==9.1
 django-ckeditor==6.5.1
 django-csp==3.7
-django-debug-toolbar==3.8.1
 django-filter==23.1
 django-js-asset==2.0.0
 django-magicauth @ git+https://github.com/betagouv/django-magicauth.git@51f4709d8593016ac67428a87bbd2810070ae288
@@ -33,6 +33,7 @@ django-oauth-toolkit==2.2.0
 django-otp==1.1.6
 django-storages==1.13.2
 django-webpack-loader==1.8.1
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-camel-case==1.4.2
 drf-base64==2.0
@@ -40,6 +41,7 @@ drf-excel==2.3.0
 drf-spectacular==0.25.1
 drf-spectacular-sidecar==2023.4.1
 et-xmlfile==1.1.0
+exceptiongroup==1.1.1
 factory-boy==3.2.1
 Faker==17.6.0
 future==0.18.3
@@ -76,7 +78,9 @@ pylint==2.17.2
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.9
+pypdf==3.7.1
 PyPDF3==1.0.6
+pypng==0.20220715.0
 pyrsistent==0.19.3
 pytest==7.2.1
 pytest-django==4.5.2
