--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,28 +5,28 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "apexcharts": "^3.40.0",
     "core-js": "^3.30.2",
     "html2pdf.js": "^0.10.1",
-    "qrcode.vue": "^1.7.0",
-    "vue": "^2.6.14",
+    "vue": "^3.2.13",
+    "@vue/compat": "^3.2.13",
     "vue-apexcharts": "^1.6.2",
     "vue-matomo": "^4.2.0",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.6.15",
-    "vuex": "^3.6.2"
+    "vuetify": "3.2.5",
+    "vuex": "4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-unit-jest": "~5.0.8",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/test-utils": "^1.3.5",
-    "@vue/vue2-jest": "^29.2.4",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/test-utils": "2.3.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.8.0",
@@ -36,8 +36,8 @@
     "sass": "^1.62.1",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.9.2",
+    "@vue/compiler-sfc": "^3.2.13",
+    "webpack-plugin-vuetify": "2.0.1",
     "webpack-bundle-tracker": "1.8.1"
   },
   "browserslist": [
