--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -337,7 +337,7 @@
         "description": "A compter du 1er mars 2022, l’origine de la viande de porc, volaille, agneau et mouton servie dans tous les restaurants hors domicile (cantines, restaurants commerciaux, restaurants d’entreprises) devra être indiquée, comme cela est le cas pour les viandes bovines depuis 2002. L’étiquetage de l’origine des viandes porcines, ovines et de volaille devra mentionner le pays d’élevage et le pays d’abattage. Cette obligation s’appliquera aux viandes achetées crues par les restaurateurs, qu’il s’agisse de viandes fraîches, réfrigérées, congelées ou surgelées, mais pas aux viandes achetées déjà préparées ou cuisinées (décret n° 2022-65 du 26 janvier 2022 modifiant le décret n° 2002-1465 du 17 décembre 2002 relatif à l’étiquetage des viandes bovines dans les établissements de restauration).",
         "id": "informations-etiquet-viande",
         "readMore": false,
-        "shortTitle": "Etiquettage des viandes",
+        "shortTitle": "Étiquetage des viandes",
         "tags": [
           "scolaire",
           "universitaire",
@@ -347,7 +347,7 @@
           "social",
           "loisirs"
         ],
-        "title": "Etiquettage détaillé pour toutes les viandes"
+        "title": "Étiquetage détaillé pour toutes les viandes"
       }
     ],
     "successExplanation": "La cantine informe ses convives sur la part de produits de qualité et durables, entrant dans la composition des repas servis, et sur les démarches d’acquisition de produits issus d'un PAT (projet alimentaire territorial).",
