--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ oauthlib==3.2.2
 openpyxl==3.1.2
 oscrypto==1.3.0
 packaging==23.1
+pandas==1.5.3
 pathspec==0.11.1
 Pillow==9.5.0
 pipdeptree==2.7.1
