Replace flake8 url by orignal url as this mirror doesn t exist anymore

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,7 +59,7 @@ repos:
   - args:
     - --config=.flake8
     id: flake8
-  repo: https://gitlab.com/pycqa/flake8
+  repo: https://github.com/pycqa/flake8
   rev: 3.8.3
 - hooks:
   - id: python-safety-dependencies-check
