--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -249,7 +249,7 @@
           "display": "Depuis le 1er janvier 2020",
           "earliestISO": "2020-01-01"
         },
-        "description": "Obligation de réemploi de la vaiselle et des récipients.",
+        "description": "Obligation de réemploi de la vaisselle et des récipients.",
         "id": "reuse",
         "readMore": false,
         "tags": [
