--- a/stats/requirements.txt
+++ b/stats/requirements.txt
@@ -4,3 +4,6 @@ ydata-profiling==4.3.1
 ipywidgets==8.0.6
 frictionless==5.13.1
 nbformat==5.9.0
+nbclient==0.8.0
+jupyter-cache==0.6.1
+plotly==5.15.0
