--- a/frontend-vue3/package.json
+++ b/frontend-vue3/package.json
@@ -11,7 +11,9 @@
     "@gouvminint/vue-dsfr": "^4.5.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuex": "^4.0.2",
+    "webpack-bundle-tracker": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
