--- a/frontend-vue3/package.json
+++ b/frontend-vue3/package.json
@@ -23,7 +23,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
