--- a/frontend-vue3/package.json
+++ b/frontend-vue3/package.json
@@ -25,7 +25,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.66.1",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "webpack-plugin-vuetify": "^2.0.1"
   },
   "eslintConfig": {
     "root": true,
