Minor text updates

--- a/frontend/src/data/key-measures.json
+++ b/frontend/src/data/key-measures.json
@@ -327,7 +327,7 @@
           "universitaire",
           "creche"
         ],
-        "title": "Les gestionnaires en restauration collective communiquent sur les informations nutritionnelles des repas servis"
+        "title": "Les gestionnaires en restauration collective communiquent sur les informations nutritionnelles des repas servis (article L 230-5)"
       },
       {
         "deadline": {
