--- a/frontend-vue3/package.json
+++ b/frontend-vue3/package.json
@@ -17,13 +17,16 @@
     "webpack-bundle-tracker": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.22.19",
+    "@babel/eslint-parser": "^7.22.15",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "prettier": "^3.0.3",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "webpack-plugin-vuetify": "^2.0.1"
